<resources>
    <string name="app_name" translatable="false">KBase</string>
    <string name="username" translatable="false">userName</string>
    <string name="password" translatable="false">PWD</string>
    <string name="login" translatable="false">Login</string>
    <string name="register" translatable="false">Register</string>
    <string name="forget" translatable="false">Forget</string>

    <string name="title_activity_login">Sign in</string>
    <string name="mainpage" translatable="false">Main</string>
    <string name="kSort" translatable="false">kSort</string>
    <string name="kBase">kBase</string>
    <string name="kMBase">kMBase</string>
    <string name="space">Space</string>

    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meInfo">InfoPerson</string>
    <string name="personal">Personal</string>
    <string name="inform">Inform</string>
    <string name="exit">Exit</string>

</resources>
