<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/form_background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="800dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/avatar"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_edittext"
        android:hint="userName"
        android:inputType="text"
        android:padding="10dp"
        android:textColorHint="@color/input_context"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edittext"
        android:hint="passWord"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/input_context"
        android:textSize="17sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/login_btn_style"
        android:text="@string/login"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/register"
            android:layout_width="0dp"
            android:layout_height="182dp"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/register" />

        <TextView
            android:id="@+id/forget"
            android:layout_width="0dp"
            android:layout_height="196dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/forget" />
    </LinearLayout>

</LinearLayout>